JoeJR second commit after 2.1

--- a/archive.html
+++ b/archive.html
@@ -2,18 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>JoeJohnRobert Archive</title>
+		<meta name="keywords" content="music, videos, Joseph, John, Robert, Cardarelli, JoeJohnRobert, prog, punk, turkish, psych, folk, programmer, musician">
+		<meta name="description" content="Music and other things of interest...">
+		<title>JoeJohnRobert Video Archive</title>
+		<link rel="stylesheet" href="css/normalize.css">
 	</head>
 	<body>
-		<h1>Video Post History</h1>
+		<header>
+			<nav>
+				<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
+			</nav>
+			<hgroup>
+				<h1>Video Post History</h1>
+			</hgroup>
+		</header>
 		<hr>
-		<table>
-			<tr>
-				<th>Date Posted</th><th>Artist</th><th>Track Title</th>
-			</tr>
-			<tr>
-				<td>6/25/14</td><td>Van der Graaf Generator</td><td>Darkness</td>
-			</tr>
-		</table>
-	</body>
+		<section>
+			<table>
+				<tr>
+					<th>Date Posted</th><th>Artist</th><th>Track Title</th>
+				</tr>
+				<tr>
+					<td>6/25/14</td><td>Van der Graaf Generator</td><td>Darkness</td>
+				</tr>
+			</table>
+		</section>
+		<footer>
+			&copy; Joe Cardarelli | All Rights Reserved
+		</footer>	
+	</body>	
 </html>
