--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="keywords" content="music, videos, Joseph, John, Robert, Cardarelli, JoeJohnRobert, prog, punk, turkish, psych, folk, programmer, musician">
+		<meta name="description" content="Music and other things of interest...">
 		<title>JoeJohnRobert</title>	
+		<link rel="stylesheet" href="css/normalize.css">
 	</head>
-		<body> 
-			<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Archive</a> <a href="contact.html">Contact</a>
-	 		<div id="wrapper" style="width:100%; text-align:center">
-	 			<h1>JoeJohnRobert</h1>
-	 			<h2>Who's that boy with the sandwich in his hand?</h2>
-	 			<p>Music and other things of interest...</p>
- 				<img src="thunders.jpg" alt = "Johnny Thunders 1973" title = "Johnny Thunders 1973" height="439" width="300"></div> 
-		</body>
-	</html>
+	<body> 
+		<header>
+			<nav>
+				<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
+			</nav>	
+	 		<hgroup>
+	 			<div id="wrapper" style="width:100%; text-align:center">
+					<h1>JoeJohnRobert</h1>
+					<h2>Who's that boy with the sandwich in his hand?</h2>
+					<h4>Music and other things of interest...</h4>
+				</div> 	
+			</hgroup>
+		</header>
+		<section>
+			<figure>		
+				<div id="wrapper" style="width:100%; text-align:center">
+					<img src="thunders.jpg" alt = "Johnny Thunders 1973" title = "Johnny Thunders 1973" height="439" width="300">
+				</div>
+			</figure>
+		</section>		 
+		<footer>
+			&copy; Joe Cardarelli | All Rights Reserved
+		</footer>	
+	</body>
+</html>
 	
