--- a/music.html
+++ b/music.html
@@ -4,27 +4,33 @@
 		<meta charset="utf-8">
 		<meta name="keywords" content="music, videos, Joseph, John, Robert, Cardarelli, JoeJohnRobert, prog, punk, turkish, psych, folk, programmer, musician">
 		<meta name="description" content="Music and other things of interest...">
-		<title>JoeJohnRobert Contact</title>
+		<title>JoeJohnRobert Music</title>	
 		<link rel="stylesheet" href="css/normalize.css">
 	</head>
-	<body>
+	<body> 
 		<header>
 			<nav>
 				<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
-			</nav>	
-			<hgroup>
-				<h1>Hit me up!</h1>
-			</hgroup>	
+			</nav>
+			<hgroup>	
+				<h1>JoeJohnRobert's Music</h1>
+				<h2>Some things I've been working on...</h2> 
+			</hgroup>
 		</header>	
+		<hr>
 		<section>
-			<form method="post" action="#">
-				Name<input type="text" name="name" placeholder="Captain Sensible" required> 
-	 			Email<input type="email" name="email" placeholder="catlover@geocities.com" required>
-	 			Message<textarea rows="10" name="message" placeholder="Your site rocks!"></textarea>
-	 			<input type="submit" value="Send!">	
-	 		</form>
-	 	</section>	
- 		<footer>
+			<p>Can't Seem to Make You Mine (Seeds cover)</p> 
+			<figure>
+				<audio controls>
+					<source src="audio/webclicktrimmed.mp4" type="audio/mp4">
+					<source src="audio/webclicktrimmed.ogg" type="audio/ogg">
+					Your browser does not support HTML5. Please upgrade your browser.	
+				</audio>
+			<!-- <figcaption>Can't Seem to Make You Mine (Seeds Cover) &copy; by Joe Cardarelli 2014
+			</figcaption> -->
+		</section>		 
+		<hr>
+		<footer>
 			&copy; Joe Cardarelli | All Rights Reserved
 		</footer>	
 	</body>
