--- a/videos.html
+++ b/videos.html
@@ -2,17 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="keywords" content="music, videos, Joseph, John, Robert, Cardarelli, JoeJohnRobert, prog, punk, turkish, psych, folk, programmer, musician">
+		<meta name="description" content="Music and other things of interest...">
 		<title>JoeJohnRobert Videos</title>	
+		<link rel="stylesheet" href="css/normalize.css">
 	</head>
-		<body> 
-	 		<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Archive</a> <a href="contact.html">Contact</a>
-	 		<h1>Music of Interest</h1>
-	 		<hr>
+	<body> 
+		<header>
+			<nav>	
+		 		<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
+		 	</nav>	
+	 		<hgroup>
+	 			<h1>Music Videos of Interest</h1>
+	 		</hgroup>	
+	 	</header>	
+ 		<hr>
+ 		<section>	
 	 		<h2>June 25, 2014</h2>
 	 		<h3>Van der Graaf Generator - Darkness (1970)</h3>
 	 		<p>Check out the double sax and Peter Hammill's sweet Mickey Mouse tee</p>
-	 		<iframe width="640" height="360" src="http://www.youtube.com/embed/WDmhP6YiN6s" allowfullscreen></iframe>
+	 		<figure>
+	 			<iframe width="640" height="360" src="http://www.youtube.com/embed/WDmhP6YiN6s" alt="VDGG - Darkness" allowfullscreen></iframe>
+	 		</figure>
 	 		<hr>
-		</body>
-	</html>
+	 	</section>	
+ 		<footer>
+			&copy; Joe Cardarelli | All Rights Reserved
+		</footer>	
+	</body>
+</html>
 	
