update with CSS

--- a/archive.html
+++ b/archive.html
@@ -6,17 +6,25 @@
 		<meta name="description" content="Music and other things of interest...">
 		<title>JoeJohnRobert Video Archive</title>
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header>
-			<nav>
-				<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
-			</nav>
-			<hgroup>
+			<div id="nav_bar">
+				<div class="wrapper">
+					<nav>
+						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+					</nav>
+				</div>		
+			</div>	
+			<div class="wrapper">
+			<!-- <hgroup -->
 				<h1>Video Post History</h1>
-			</hgroup>
+			<!-- </hgroup> -->
+			</div>
 		</header>
 		<hr>
+		<div class="wrapper">
 		<section>
 			<table>
 				<tr>
@@ -25,10 +33,14 @@
 				<tr>
 					<td>6/25/14</td><td>Van der Graaf Generator</td><td>Darkness</td>
 				</tr>
+				<tr>
+					<td>7/17/14</td><td>Shawn Phillips & Donovan</td><td>Kingfisher</td>
+				</tr>	
 			</table>
 		</section>
+		</div>
 		<footer>
-			&copy; Joe Cardarelli | All Rights Reserved
+			Who's that boy with the sandwich in his hand?
 		</footer>	
 	</body>	
 </html>
