--- a/videos.html
+++ b/videos.html
@@ -6,28 +6,46 @@
 		<meta name="description" content="Music and other things of interest...">
 		<title>JoeJohnRobert Videos</title>	
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body> 
 		<header>
-			<nav>	
-		 		<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
-		 	</nav>	
-	 		<hgroup>
-	 			<h1>Music Videos of Interest</h1>
-	 		</hgroup>	
+			<div id="nav_bar">
+				<div class="wrapper">
+					<nav>
+						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+					</nav>	
+				</div>	
+			</div>	
+	 		<!-- <hgroup> -->
+	 		<div class="wrapper">
+	 			<h1>Music of Interest</h1>
+	 		</div>	
+	 		<!-- </hgroup> -->	
 	 	</header>	
  		<hr>
- 		<section>	
-	 		<h2>June 25, 2014</h2>
-	 		<h3>Van der Graaf Generator - Darkness (1970)</h3>
-	 		<p>Check out the double sax and Peter Hammill's sweet Mickey Mouse tee</p>
-	 		<figure>
-	 			<iframe width="640" height="360" src="http://www.youtube.com/embed/WDmhP6YiN6s" alt="VDGG - Darkness" allowfullscreen></iframe>
-	 		</figure>
-	 		<hr>
-	 	</section>	
+ 		<div class="wrapper">
+	 		<section>	
+		 		<h2>June 25, 2014</h2>
+		 		<h3>Van der Graaf Generator - Darkness (1970)</h3>
+		 		<p>Check out the double sax and Peter Hammill's sweet Mickey Mouse tee</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/WDmhP6YiN6s" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>	
+		 	<section>	
+		 		<h2>July 17, 2014</h2>
+		 		<h3>Shawn Phillips & Donovan - Kingfisher (1966)</h3>
+		 		<p>What a gem. From Pete Seeger's Rainbow Quest TV Show</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/lRxKl0zz2tE" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>
+		</div> 		
  		<footer>
-			&copy; Joe Cardarelli | All Rights Reserved
+			Who's that boy with the sandwich in his hand?
 		</footer>	
 	</body>
 </html>
