--- a/index.html
+++ b/index.html
@@ -6,30 +6,37 @@
 		<meta name="description" content="Music and other things of interest...">
 		<title>JoeJohnRobert</title>	
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body> 
-		<header>
-			<nav>
-				<a href="index.html">Home</a> <a href="videos.html">Videos</a> <a href="archive.html">Video Archive</a> <a href="music.html">Music</a> <a href="contact.html">Contact</a>
-			</nav>	
-	 		<hgroup>
-	 			<div id="wrapper" style="width:100%; text-align:center">
-					<h1>JoeJohnRobert</h1>
-					<h2>Who's that boy with the sandwich in his hand?</h2>
-					<h4>Music and other things of interest...</h4>
-				</div> 	
-			</hgroup>
-		</header>
-		<section>
-			<figure>		
-				<div id="wrapper" style="width:100%; text-align:center">
+	<!-- <div id="weave"> -->
+		<body> 
+			<header>
+				<div id="nav_bar">
+					<div class="wrapper">
+						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+					</div>	
+				</div>	
+		 			<!-- <div id="wrapper" style="width:100%; text-align:center"> -->
+				 
+				<div id="logo" class="clearfix">
+					<div class="wrapper">
+						<h1>JoeJohnRobert</h1>
+						<!--	<h2>Who's that boy with the sandwich in his hand?</h2> -->
+						<h4>Music and other things of interest...</h4>
+					</div>	
+				</div>	
+			</header>				
+			<figure> 
+				<div class="wrapper, image_center">		
 					<img src="thunders.jpg" alt = "Johnny Thunders 1973" title = "Johnny Thunders 1973" height="439" width="300">
 				</div>
 			</figure>
-		</section>		 
-		<footer>
-			&copy; Joe Cardarelli | All Rights Reserved
-		</footer>	
-	</body>
+					<!-- </div> -->	
+				 
+			<footer>
+				Who's that boy with the sandwich in his hand?
+			</footer>	
+		</body>
+	<!-- </div> weave -->
 </html>
 	
