css update, sweet wood border

--- a/archive.html
+++ b/archive.html
@@ -8,39 +8,48 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
-		<header>
-			<div id="nav_bar">
+	<div id="border">
+		<body>
+			<header>
+				<div id="nav_bar">
+					<div class="wrapper">
+						<nav>
+							<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+						</nav>
+					</div>		
+				</div>	
+				<div id="logo" class="clearfix">
+						<div class="wrapper">
+							<h1>JoeJohnRobert</h1>
+							<!--	<h2>Who's that boy with the sandwich in his hand?</h2> -->
+							<h4>Music and other things of interest...</h4>
+						</div>	
+					</div>	
 				<div class="wrapper">
-					<nav>
-						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
-					</nav>
-				</div>		
-			</div>	
+				<!-- <hgroup -->
+					<!-- <h1>Video Post History</h1> -->
+				<!-- </hgroup> -->
+				</div>
+			</header>
+			<hr>
 			<div class="wrapper">
-			<!-- <hgroup -->
-				<h1>Video Post History</h1>
-			<!-- </hgroup> -->
+			<section class="shadow">
+				<table>
+					<tr>
+						<th>Date Posted</th><th>Artist</th><th>Track Title</th>
+					</tr>
+					<tr>
+						<td>6/25/14</td><td>Van der Graaf Generator</td><td>Darkness</td>
+					</tr>
+					<tr>
+						<td>7/17/14</td><td>Shawn Phillips & Donovan</td><td>Kingfisher</td>
+					</tr>	
+				</table>
+			</section>
 			</div>
-		</header>
-		<hr>
-		<div class="wrapper">
-		<section>
-			<table>
-				<tr>
-					<th>Date Posted</th><th>Artist</th><th>Track Title</th>
-				</tr>
-				<tr>
-					<td>6/25/14</td><td>Van der Graaf Generator</td><td>Darkness</td>
-				</tr>
-				<tr>
-					<td>7/17/14</td><td>Shawn Phillips & Donovan</td><td>Kingfisher</td>
-				</tr>	
-			</table>
-		</section>
-		</div>
-		<footer>
-			Who's that boy with the sandwich in his hand?
-		</footer>	
-	</body>	
+			<footer>
+				Who's that boy with the sandwich in his hand?
+			</footer>	
+		</body>	
+	</div>	
 </html>
