--- a/index.html
+++ b/index.html
@@ -4,39 +4,62 @@
 		<meta charset="utf-8">
 		<meta name="keywords" content="music, videos, Joseph, John, Robert, Cardarelli, JoeJohnRobert, prog, punk, turkish, psych, folk, programmer, musician">
 		<meta name="description" content="Music and other things of interest...">
-		<title>JoeJohnRobert</title>	
+		<title>JoeJohnRobert Videos</title>	
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<!-- <div id="weave"> -->
-		<body> 
-			<header>
-				<div id="nav_bar">
-					<div class="wrapper">
-						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
-					</div>	
+	<div id="border"
+	<body> 
+		<header>
+			<div id="nav_bar">
+				<div class="wrapper">
+					<nav>
+						<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+					</nav>	
 				</div>	
-		 			<!-- <div id="wrapper" style="width:100%; text-align:center"> -->
-				 
-				<div id="logo" class="clearfix">
+			</div>	
+			<div id="logo" class="clearfix">
 					<div class="wrapper">
 						<h1>JoeJohnRobert</h1>
 						<!--	<h2>Who's that boy with the sandwich in his hand?</h2> -->
 						<h4>Music and other things of interest...</h4>
 					</div>	
 				</div>	
-			</header>				
-			<figure> 
-				<div class="wrapper, image_center">		
-					<img src="thunders.jpg" alt = "Johnny Thunders 1973" title = "Johnny Thunders 1973" height="439" width="300">
-				</div>
-			</figure>
-					<!-- </div> -->	
-				 
-			<footer>
-				Who's that boy with the sandwich in his hand?
-			</footer>	
-		</body>
-	<!-- </div> weave -->
+	 		<!-- <hgroup> -->
+	 		<div class="wrapper">
+	 			<!-- <h1>Music of Interest</h1> -->
+	 		</div>	
+	 		<!-- </hgroup> -->	
+	 	</header>	
+ 		<hr>
+ 		<div class="wrapper">
+	 		<section class="col2_left shadow">	
+		 		<h2>June 25, 2014</h2>
+		 		<h3>Van der Graaf Generator - Darkness (1970)</h3>
+		 		<p>Check out the double sax and Peter Hammill's sweet Mickey Mouse tee</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/WDmhP6YiN6s" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>
+		 	<!-- <section class="col1_right">
+		 		<p>text here sdgsdgsdgsdgsdgsdgsdgsdg</p>
+		 	</section> -->		
+		 	<section class="col2_left shadow">	
+		 		<h2>July 17, 2014</h2>
+		 		<h3>Shawn Phillips & Donovan - Kingfisher (1966)</h3>
+		 		<p>What a gem. From Pete Seeger's Rainbow Quest TV Show</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/lRxKl0zz2tE" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>
+
+		</div> 		
+ 		<footer>
+			Who's that boy with the sandwich in his hand?
+		</footer>	
+	</body>
+	</div>
 </html>
 	
