--- a/music.html
+++ b/music.html
@@ -8,41 +8,50 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body> 
-		<header>
-			<div id="nav_bar">
+	<div id="border">
+		<body> 
+			<header>
+				<div id="nav_bar">
+					<div class="wrapper">
+						<nav>
+							<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+						</nav>	
+					</div>
+				</div>	
+				<div id="logo" class="clearfix">
+						<div class="wrapper">
+							<h1>JoeJohnRobert</h1>
+							<!--	<h2>Who's that boy with the sandwich in his hand?</h2> -->
+							<h4>Music and other things of interest...</h4>
+						</div>	
+					</div>		
+				<!-- <hgroup> -->	
 				<div class="wrapper">
-					<nav>
-						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
-					</nav>	
-				</div>
-			</div>	
-
-			<!-- <hgroup> -->	
+					<!-- <h1>JoeJohnRobert's Music</h1> -->
+					<h2 class="italics">Some things I've been working on...</h2>
+				</div>	 
+				<!-- </hgroup> -->
+			</header>	
+			<hr>
 			<div class="wrapper">
-				<h1>JoeJohnRobert's Music</h1>
-				<h2 class="italics">Some things I've been working on...</h2>
-			</div>	 
-			<!-- </hgroup> -->
-		</header>	
-		<hr>
-		<div class="wrapper">
-			<section>
-				<h5>Can't Seem to Make You Mine (Seeds cover)</h5> 
-				<figure>
-					<audio controls>
-						<source src="audio/webclicktrimmed.mp4" type="audio/mp4">
-						<source src="audio/webclicktrimmed.ogg" type="audio/ogg">
-						Your browser does not support HTML5. Please upgrade your browser.	
-					</audio>
-		</div>			
-				<!-- <figcaption>Can't Seem to Make You Mine (Seeds Cover) &copy; by Joe Cardarelli 2014
-			</figcaption> -->
-		</figure>
-		</section>		 
-		<hr>
-		<footer>
-			Who's that boy with the sandwich in his hand?
-		</footer>	
-	</body>
+				<section class="col2_left shadow">
+					<h5>Can't Seem to Make You Mine (Seeds cover)</h5> 
+					<figure>
+						<audio controls>
+							<source src="audio/webclicktrimmed.mp4" type="audio/mp4">
+							<source src="audio/webclicktrimmed.ogg" type="audio/ogg">
+							Your browser does not support HTML5. Please upgrade your browser.	
+						</audio>
+					
+			</div>			
+					<!-- <figcaption>Can't Seem to Make You Mine (Seeds Cover) &copy; by Joe Cardarelli 2014
+				</figcaption> -->
+			</figure>
+			</section>		 
+			<hr>
+			<footer>
+				Who's that boy with the sandwich in his hand?
+			</footer>	
+		</body>
+	</div>	
 </html>
