--- a/contact.html
+++ b/contact.html
@@ -8,33 +8,42 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
-		<header>
-			<div id="nav_bar">
+	<div id="border">
+		<body>
+			<header>
+				<div id="nav_bar">
+					<div class="wrapper">
+						<nav>
+							<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+						</nav>
+					</div>		
+				</div>	
+				<div id="logo" class="clearfix">
+						<div class="wrapper">
+							<h1>JoeJohnRobert</h1>
+							<!--	<h2>Who's that boy with the sandwich in his hand?</h2> -->
+							<h4>Music and other things of interest...</h4>
+						</div>	
+					</div>	
+				<!-- <hgroup> -->
 				<div class="wrapper">
-					<nav>
-						<a href="index.html">Home</a> | <a href="videos.html">Videos</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
-					</nav>
-				</div>		
-			</div>	
-			<!-- <hgroup> -->
-			<div class="wrapper">
-				<h1>Hit me up!</h1>
-			</div>	
-			<!-- </hgroup>	-->
-		</header>
-		<div class="wrapper">	
-			<section>
-				<form method="post" action="#">
-					Name<input type="text" name="name" placeholder="Captain Sensible" required> 
-		 			Email<input type="email" name="email" placeholder="catlover@geocities.com" required>
-		 			Message<textarea rows="10" name="message" placeholder="Your site rocks!"></textarea>
-		 			<input type="submit" value="Send!">	
-		 		</form>
-		 	</section>
-		</div> 		
- 		<footer>
-			Who's that boy with the sandwich in his hand?
-		</footer>	
-	</body>
+					<!-- <h1>Hit me up!</h1> -->
+				</div>	
+				<!-- </hgroup>	-->
+			</header>
+			<div class="wrapper">	
+				<section class="shadow">
+					<form method="post" action="#">
+						Name<input type="text" name="name" placeholder="Captain Sensible" required> 
+			 			Email<input type="email" name="email" placeholder="catlover@geocities.com" required>
+			 			Message<textarea rows="10" name="message" placeholder="Your site rocks!"></textarea>
+			 			<input type="submit" value="Send!">	
+			 		</form>
+			 	</section>
+			</div> 		
+	 		<footer>
+				Who's that boy with the sandwich in his hand?
+			</footer>	
+		</body>
+	</div>	
 </html>
