update with nav bar styling and social media links

--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
 			<div class="wrapper">	
 				<section class="shadow">
 					<form method="post" action="#">
-						Name<input type="text" name="name" placeholder="Captain Sensible" required> 
-			 			Email<input type="email" name="email" placeholder="catlover@geocities.com" required>
-			 			Message<textarea rows="10" name="message" placeholder="Your site rocks!"></textarea>
+						Name<input type="text" name="name" placeholder="CAPTAIN SENSIBLE" required> 
+			 			Email<input type="email" name="email" placeholder="CATLOVER@GEOCITIES.COM" required>
+			 			Message<textarea rows="10" name="message" placeholder="YOUR SITE ROCKS!"></textarea>
 			 			<input type="submit" value="Send!">	
 			 		</form>
 			 	</section>
