--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<div id="border"
+	<div id="border">
 	<body> 
+		<div id="social">
+			<a class="twitt" href="#" target="_blank" title="twitter">Twitter</a>
+			<a class="insta" href="#" target="_blank" title="instagram">Facebook</a>	
+		</div>
 		<header>
 			<div id="nav_bar">
 				<div class="wrapper">
 					<nav>
-						<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+						<a class="selected" href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
 					</nav>	
 				</div>	
 			</div>	
