update with mobile styling and mailer script

--- a/archive.html
+++ b/archive.html
@@ -10,11 +10,15 @@
 	</head>
 	<div id="border">
 		<body>
+			<div id="social">
+			<a class="twitt" href="#" target="_blank" title="twitter">Twitter</a>
+			<a class="insta" href="#" target="_blank" title="instagram">Facebook</a>
+			</div>
 			<header>
 				<div id="nav_bar">
 					<div class="wrapper">
 						<nav>
-							<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+							<a href="index.html">Home</a> | <a class="selected" href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
 						</nav>
 					</div>		
 				</div>	
@@ -33,8 +37,8 @@
 			</header>
 			<hr>
 			<div class="wrapper">
-			<section class="shadow">
-				<table>
+			<section class="shadow col3">
+					<table>
 					<tr>
 						<th>Date Posted</th><th>Artist</th><th>Track Title</th>
 					</tr>
@@ -44,7 +48,7 @@
 					<tr>
 						<td>7/17/14</td><td>Shawn Phillips & Donovan</td><td>Kingfisher</td>
 					</tr>	
-				</table>
+					</table>	
 			</section>
 			</div>
 			<footer>
