--- a/contact_success.html
+++ b/contact_success.html
@@ -7,14 +7,21 @@
 		<title>JoeJohnRobert Contact</title>
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/device_styles.css">	
 	</head>
 	<div id="border">
 		<body>
+			<div id="social">
+			<a class="twitt" href="#" target="_blank" title="twitter">Twitter</a>
+			<a class="insta" href="#" target="_blank" title="instagram">Facebook</a>	
+		</div>
 			<header>
 				<div id="nav_bar">
 					<div class="wrapper">
 						<nav>
-							<a href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+							<a href="index.html">Home</a>
+							<a href="music.html">Music</a>
+							<a class="selected" href="contact.html">Contact</a>
 						</nav>
 					</div>		
 				</div>	
@@ -33,12 +40,9 @@
 			</header>
 			<div class="wrapper">	
 				<section class="shadow">
-					<form method="post" action="#">
-						Name<input type="text" name="name" placeholder="CAPTAIN SENSIBLE" required> 
-			 			Email<input type="email" name="email" placeholder="CATLOVER@GEOCITIES.COM" required>
-			 			Message<textarea rows="10" name="message" placeholder="YOUR SITE ROCKS!"></textarea>
-			 			<input type="submit" value="Send!">	
-			 		</form>
+				
+				<h2> Success! </h2>		
+			 		
 			 	</section>
 			</div> 		
 	 		<footer>
