--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>JoeJohnRobert Videos</title>	
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/device_styles.css">	
 	</head>
 	<div id="border">
 	<body> 
@@ -18,7 +19,9 @@
 			<div id="nav_bar">
 				<div class="wrapper">
 					<nav>
-						<a class="selected" href="index.html">Home</a> | <a href="archive.html">Video Archive</a> | <a href="music.html">Music</a> | <a href="contact.html">Contact</a>
+						<a class="selected" href="index.html">Home</a>
+						<a href="music.html">Music</a>
+						<a href="contact.php">Contact</a>
 					</nav>	
 				</div>	
 			</div>	
