update to contact page, mobile logo styling and new vids to index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,39 @@
 	 	</header>	
  		<hr>
  		<div class="wrapper">
+ 				
+
+ 				<section class="col2_left shadow">	
+		 		<h2>July 20, 2014</h2>
+		 		<h3>Small Faces - Hey Girl & (1966)</h3>
+		 		<p>Steve Marriott! Live on German TV. Die jugend tanzt gerne! </p>
+		 		<figure>
+		 				<iframe width="640" height="360" src="//www.youtube.com/embed/5oaw7evBdrE" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>
+ 			
+
+ 				<section class="col2_left shadow">	
+		 		<h2>July 20, 2014</h2>
+		 		<h3>Ultravox! - Slip Away (1976)</h3>
+		 		<p>John Foxx killing it</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/JJ1ln7oxfqw" allowfullscreen></iframe>
+
+		 		</figure>
+		 		<hr>
+		 	</section>
+
+ 				<section class="col2_left shadow">	
+		 		<h2>July 17, 2014</h2>
+		 		<h3>Shawn Phillips & Donovan - Kingfisher (1966)</h3>
+		 		<p>What a gem. From Pete Seeger's Rainbow Quest TV Show</p>
+		 		<figure>
+		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/lRxKl0zz2tE" allowfullscreen></iframe>
+		 		</figure>
+		 		<hr>
+		 	</section>
 	 		<section class="col2_left shadow">	
 		 		<h2>June 25, 2014</h2>
 		 		<h3>Van der Graaf Generator - Darkness (1970)</h3>
@@ -52,15 +85,7 @@
 		 	<!-- <section class="col1_right">
 		 		<p>text here sdgsdgsdgsdgsdgsdgsdgsdg</p>
 		 	</section> -->		
-		 	<section class="col2_left shadow">	
-		 		<h2>July 17, 2014</h2>
-		 		<h3>Shawn Phillips & Donovan - Kingfisher (1966)</h3>
-		 		<p>What a gem. From Pete Seeger's Rainbow Quest TV Show</p>
-		 		<figure>
-		 			<iframe width="640" height="360" src="http://www.youtube.com/embed/lRxKl0zz2tE" allowfullscreen></iframe>
-		 		</figure>
-		 		<hr>
-		 	</section>
+		 
 
 		</div> 		
  		<footer>
